docs/7.52/md/abenabap_shortref.md
---
title: "ABAP - Quick Reference"
description: |
  A ADD(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapadd_shortref.htm) ADD-CORRESPONDING(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapadd-corresponding_shortref.htm) ADD - THEN, UNTIL(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapadd_then_from
version: "7.52"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_shortref.htm"
abapFile: "abenabap_shortref.htm"
keywords: ["select", "insert", "update", "delete", "loop", "do", "while", "if", "case", "try", "catch", "method", "class", "data", "types", "abenabap", "shortref"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) → 

ABAP - Quick Reference

A

[ADD](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapadd_shortref.htm)
[ADD-CORRESPONDING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapadd-corresponding_shortref.htm)
[ADD - THEN, UNTIL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapadd_then_from_shortref.htm)
[agg\_exp](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenaggregate_shortref.htm)
[ALIASES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapaliases_shortref.htm)
[APPEND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapappend_shortref.htm)
[ASSERT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapassert_shortref.htm)
[ASSIGN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapassign_shortref.htm)
[ASSIGN - LOCAL COPY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapassign_local_copy_shortref.htm)
[AT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapat_shortref.htm)
[AT PF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapat_pf_shortref.htm)
[AT LINE-SELECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapat_line-selection_shortref.htm)
[AT SELECTION-SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapat_selection-screen_shortref.htm)
[AT USER-COMMAND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapat_user-command_shortref.htm)
[AUTHORITY-CHECK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapauthority-check_shortref.htm)

B

[BACK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapback_shortref.htm)
[BREAK-POINT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapbreak-point_shortref.htm)

C

[CALL BADI](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_badi_shortref.htm)
[CALL DIALOG](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_dialog_shortref.htm)
[CALL FUNCTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_function_shortref.htm)
[CALL CUSTOMER-FUNCTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_customer_func_shortref.htm)
[CALL DATABASE PROCEDURE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_db_procedure_shortref.htm)
[CALL METHOD](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_method_shortref.htm)
[CALL METHOD - OLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_method_of_ole_shortref.htm)
[CALL SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_screen_shortref.htm)
[CALL SELECTION-SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_selection-screen_shortref.htm)
[CALL TRANSACTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_transaction_shortref.htm)
[CALL TRANSFORMATION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_transformation_shortref.htm)
[CASE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcase_shortref.htm)
[CASE TYPE OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcase_type_shortref.htm)
[CATCH SYSTEM-EXCEPTIONS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcatch_system-except_shortref.htm)
[CHECK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcheck_shortref.htm)
[CLASS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclass_shortref.htm)
[CLASS - DEFERRED, LOAD](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclass_deferred_load_shortref.htm)
[CLASS-DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclass-data_shortref.htm)
[CLASS-EVENTS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclass-events_shortref.htm)
[CLASS-METHODS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclass-methods_shortref.htm)
[CLASS-POOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclass-pool_shortref.htm)
[CLEAR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclear_shortref.htm)
[CLOSE CURSOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclose_cursor_shortref.htm)
[CLOSE DATASET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclose_dataset_shortref.htm)
[COLLECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcollect_shortref.htm)
[COMMIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcommit_shortref.htm)
[COMMIT CONNECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcommit_connection_shortref.htm)
[COMMUNICATION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcommunication_shortref.htm)
[COMPUTE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcompute_shortref.htm)
[CONCATENATE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapconcatenate_shortref.htm)
[CONDENSE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcondense_shortref.htm)
[CONSTANTS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapconstants_shortref.htm)
[CONTEXTS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontexts_shortref.htm)
[CONTINUE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontinue_shortref.htm)
[CONTROLS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontrols_shortref.htm)
[CONVERT DATE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapconvert_date_shortref.htm)
[CONVERT TEXT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapconvert_text_shortref.htm)
[CONVERT TIME STAMP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapconvert_time_stamp_shortref.htm)
[CREATE DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcreate_data_shortref.htm)
[CREATE OBJECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcreate_object_shortref.htm)
[CREATE OBJECT - OLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcreate_object_ole_shortref.htm)

D

[DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_shortref.htm)
[DATA BEGIN OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_begin_of_shortref.htm)
[DATA - COMMON PART](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_common_part_shortref.htm)
[DATA - OCCURS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_occurs_shortref.htm)
[DEFINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdefine_shortref.htm)
[DELETE DATASET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdelete_dataset_shortref.htm)
[DELETE dbtab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdelete_dbtab_shortref.htm)
[DELETE itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdelete_itab_shortref.htm)
[DELETE FROM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdelete_from_shortref.htm)
[DEMAND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdemand_shortref.htm)
[DESCRIBE DISTANCE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdescribe_distance_shortref.htm)
[DESCRIBE FIELD](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdescribe_field_shortref.htm)
[DESCRIBE LIST](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdescribe_list_shortref.htm)
[DESCRIBE TABLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdescribe_table_shortref.htm)
[DETAIL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdetail_shortref.htm)
[DIVIDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdivide_shortref.htm)
[DIVIDE-CORRESPONDING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdivide-corresponding_shortref.htm)
[DO](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdo_shortref.htm)

E

[EDITOR-CALL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapeditor-call_shortref.htm)
[END-OF-PAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapend-of-page_shortref.htm)
[END-OF-SELECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapend-of-selection_shortref.htm)
[ENHANCEMENT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement_shortref.htm)
[ENHANCEMENT-POINT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-point_shortref.htm)
[ENHANCEMENT-SECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-section_shortref.htm)
[EVENTS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapevents_shortref.htm)
[EXEC SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapexec_sql_shortref.htm)
[EXIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapexit_shortref.htm)
[EXIT FROM SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapexit_from_sql_shortref.htm)
[EXIT FROM STEP-LOOP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapexit_from_step-loop_shortref.htm)
[EXPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapexport_shortref.htm)
[EXTRACT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapextract_shortref.htm)

F

[FETCH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfetch_shortref.htm)
[FIELD-GROUPS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfield-groups_shortref.htm)
[FIELD-SYMBOLS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfield-symbols_shortref.htm)
[FIELDS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfields_shortref.htm)
[FIND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfind_shortref.htm)
[FORM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapform_shortref.htm)
[FORMAT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapformat_shortref.htm)
[FREE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfree_shortref.htm)
[FREE MEMORY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfree_memory_shortref.htm)
[FREE OBJECT - OLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfree_object_shortref.htm)
[FUNCTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfunction_shortref.htm)
[FUNCTION-POOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfunction-pool_shortref.htm)

G

[GENERATE SUBROUTINE POOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapgenerate_shortref.htm)
[GET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_shortref.htm)
[GET BADI](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_badi_shortref.htm)
[GET BIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_bit_shortref.htm)
[GET CURSOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_cursor_shortref.htm)
[GET DATASET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_dataset_shortref.htm)
[GET LOCALE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_locale_shortref.htm)
[GET PARAMETER](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_parameter_shortref.htm)
[GET PF-STATUS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_pf-status_shortref.htm)
[GET PROPERTY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_property_shortref.htm)
[GET REFERENCE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_reference_shortref.htm)
[GET RUN TIME](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_run_time_shortref.htm)
[GET TIME](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_time_shortref.htm)
[GET TIME STAMP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_time_stamp_shortref.htm)

H

[HIDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaphide_shortref.htm)

I

[IF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapif_shortref.htm)
[IMPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapimport_shortref.htm)
[IMPORT DIRECTORY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapimport_directory_shortref.htm)
[INCLUDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinclude_shortref.htm)
[INCLUDE - TYPE, STRUCTURE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinclude_type_shortref.htm)
[INFOTYPES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinfotypes_shortref.htm)
[INITIALIZATION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinitialization_shortref.htm)
[INPUT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinput_shortref.htm)
[INSERT dbtab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_dbtab_shortref.htm)
[INSERT field-group](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_field-group_shortref.htm)
[INSERT itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_itab_shortref.htm)
[INSERT REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report_shortref.htm)
[INSERT TEXTPOOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_textpool_shortref.htm)
[INTERFACE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinterface_shortref.htm)
[INTERFACE - DEFERRED, LOAD](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinterface_deferred_lo_shortref.htm)
[INTERFACE-POOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinterface-pool_shortref.htm)
[INTERFACES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinterfaces_shortref.htm)

L

[LEAVE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_shortref.htm)
[LEAVE LIST-PROCESSING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_list-processing_shortref.htm)
[LEAVE PROGRAM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_program_shortref.htm)
[LEAVE SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_screen_shortref.htm)
[LEAVE TO LIST-PROCESSING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_to_list-process_shortref.htm)
[LEAVE TO TRANSACTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_to_transaction_shortref.htm)
[LOAD-OF-PROGRAM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapload-of-program_shortref.htm)
[LOCAL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaplocal_shortref.htm)
[LOG-POINT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaplog-point_shortref.htm)
[log\_exp](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlog_exp_shortref.htm)
[LOOP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_shortref.htm)
[LOOP AT dbtab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_dbtab_shortref.htm)
[LOOP AT itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_itab_shortref.htm)
[LOOP AT GROUP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_group_shortref.htm)
[LOOP AT SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_screen_shortref.htm)

M

[MAXIMUM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmaximum_shortref.htm)
[MESSAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmessage_shortref.htm)
[METHOD](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethod_shortref.htm)
[METHODS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_shortref.htm)
[METHODS - FOR TESTING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_testing_shortref.htm)
[METHODS - REDEFINITION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_redefinition_shortref.htm)
[meth( ... )](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmeth_call_shortref.htm)
[MINIMUM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapminimum_shortref.htm)
[MODIFY dbtab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmodify_dbtab_shortref.htm)
[MODIFY itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmodify_itab_shortref.htm)
[MODIFY LINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmodify_line_shortref.htm)
[MODIFY SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmodify_screen_shortref.htm)
[MODULE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmodule_shortref.htm)
[MOVE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmove_shortref.htm)
[MOVE-CORRESPONDING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmove-corresponding_shortref.htm)
[MOVE PERCENTAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmove_percentage_shortref.htm)
[MULTIPLY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmultiply_shortref.htm)
[MULTIPLY-CORRESPONDING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmultiply-correspond_shortref.htm)

N

[NEW-LINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapnew-line_shortref.htm)
[NEW-PAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapnew-page_shortref.htm)
[NEW-SECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapnew-section_shortref.htm)
[NODES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapnodes_shortref.htm)

O

[ON CHANGE OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapon_change_of_shortref.htm)
[OPEN CURSOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapopen_cursor_shortref.htm)
[OPEN DATASET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapopen_dataset_shortref.htm)
[OVERLAY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapoverlay_shortref.htm)

P

[PACK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abappack_shortref.htm)
[PARAMETERS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapparameters_shortref.htm)
[PERFORM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapperform_shortref.htm)
[POSITION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapposition_shortref.htm)
[PRINT-CONTROL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control_shortref.htm)
[PROGRAM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprogram_shortref.htm)
[PROVIDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide_shortref.htm)
[PUT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapput_shortref.htm)

R

[RAISE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_shortref.htm)
[RAISE EVENT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_event_shortref.htm)
[RAISE EXCEPTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_shortref.htm)
[RANGES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapranges_shortref.htm)
[READ DATASET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_dataset_shortref.htm)
[READ LINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_line_shortref.htm)
[READ REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_report_shortref.htm)
[READ TABLE dbtab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_table_dbtab_shortref.htm)
[READ TABLE itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_table_itab_shortref.htm)
[READ TEXTPOOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_textpool_shortref.htm)
[RECEIVE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreceive_shortref.htm)
[REFRESH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprefresh_shortref.htm)
[REFRESH CONTROL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprefresh_control_shortref.htm)
[REFRESH - FROM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprefresh_from_shortref.htm)
[REJECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreject_shortref.htm)
[REPLACE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreplace_shortref.htm)
[REPLACE substring WITH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreplace_pattern_shortref.htm)
[REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreport_shortref.htm)
[RESERVE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreserve_shortref.htm)
[RESUME](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapresume_shortref.htm)
[RETRY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapretry_shortref.htm)
[RETURN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreturn_shortref.htm)
[ROLLBACK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprollback_shortref.htm)
[ROLLBACK CONNECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaprollback_connection_shortref.htm)

S

[SCROLL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapscroll_shortref.htm)
[SEARCH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsearch_shortref.htm)
[SELECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_shortref.htm)
[SELECT-OPTIONS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect-options_shortref.htm)
[SELECTION-SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_shortref.htm)
[SELECTION-SCREEN - BEGIN OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_bos_shortref.htm)
[SELECTION-SCREEN - BLOCK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_bob_shortref.htm)
[SELECTION-SCREEN - LINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_bol_shortref.htm)
[SELECTION-SCREEN - TABBED BLOCK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_botb_shortref.htm)
[SELECTION-SCREEN - VERSION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_bov_shortref.htm)
[SELECTION-SCREEN DYNAMIC SELECTIONS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_dyna_shortref.htm)
[SELECTION-SCREEN EXCLUDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_excl_shortref.htm)
[SELECTION-SCREEN FIELD SELECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_fiel_shortref.htm)
[SELECTION-SCREEN INCLUDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_incl_shortref.htm)
[SELECTION-SCREEN TAB](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_tab_shortref.htm)
[SET ASSOCIATION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_association_shortref.htm)
[SET BIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_bit_shortref.htm)
[SET BLANK LINES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_blank_lines_shortref.htm)
[SET COUNTRY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_country_shortref.htm)
[SET CURSOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_cursor_shortref.htm)
[SET DATASET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_dataset_shortref.htm)
[SET EXTENDED CHECK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_extended_check_shortref.htm)
[SET HANDLER](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_handler_shortref.htm)
[SET HOLD DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_hold_data_shortref.htm)
[SET LANGUAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_language_shortref.htm)
[SET LEFT SCROLL-BOUNDARY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_left_scroll_bound_shortref.htm)
[SET LOCALE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_locale_shortref.htm)
[SET MARGIN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_margin_shortref.htm)
[SET PARAMETER](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_parameter_shortref.htm)
[SET PF-STATUS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_pf-status_shortref.htm)
[SET PROPERTY - OLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_property_shortref.htm)
[SET RUN TIME ANALYZER](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_run_time_analyzer_shortref.htm)
[SET RUN TIME CLOCK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_run_time_clock_shortref.htm)
[SET SCREEN](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_screen_shortref.htm)
[SET TITLEBAR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_titlebar_shortref.htm)
[SET UPDATE TASK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_update_task_shortref.htm)
[SET USER-COMMAND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_user-command_shortref.htm)
[SHIFT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapshift_shortref.htm)
[SKIP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapskip_shortref.htm)
[SORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsort_shortref.htm)
[SORT itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsort_itab_shortref.htm)
[SPLIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsplit_shortref.htm)
[sql\_cond](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_cond_shortref.htm)
[START-OF-EDITING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapstart-of-editing_shortref.htm)
[START-OF-SELECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapstart-of-selection_shortref.htm)
[STATICS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapstatics_shortref.htm)
[STOP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapstop_shortref.htm)
[SUBMIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsubmit_shortref.htm)
[subquery](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensubquery_shortref.htm)
[SUBTRACT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsubtract_shortref.htm)
[SUBTRACT-CORRESPONDING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsubtract-correspond_shortref.htm)
[SUM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsum_shortref.htm)
[SUMMARY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsummary_shortref.htm)
[SUMMING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsumming_shortref.htm)
[SUPPLY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsupply_shortref.htm)
[SUPPRESS DIALOG](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsuppress_dialog_shortref.htm)
[SYNTAX-CHECK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsyntax-check_shortref.htm)

T

[TABLES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptables_shortref.htm)
[TABLES \*](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptables_plus_shortref.htm)
[TEST-INJECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptest-injection_shortref.htm)
[TEST-SEAM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptest-seam_shortref.htm)
[TOP-OF-PAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptop-of-page_shortref.htm)
[TRANSFER](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptransfer_shortref.htm)
[TRANSLATE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptranslate_shortref.htm)
[TRUNCATE DATASET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptruncate_dataset_shortref.htm)
[TRY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptry_shortref.htm)
[TYPE-POOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptype-pool_shortref.htm)
[TYPE-POOLS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptype-pools_shortref.htm)
[TYPES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_shortref.htm)
[TYPES BEGIN OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_begin_of_shortref.htm)
[TYPES BEGIN OF ENUM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_begin_of_enum_shortref.htm)
[TYPES BEGIN OF MESH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_begin_of_mesh_shortref.htm)
[TYPES - OCCURS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_occurs_shortref.htm)
[typing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentyping_shortref.htm)

U

[ULINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapuline_shortref.htm)
[UNPACK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapunpack_shortref.htm)
[UPDATE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapupdate_shortref.htm)

W

[WAIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwait_shortref.htm)
[WHILE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwhile_shortref.htm)
[WINDOW](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwindow_shortref.htm)
[WITH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwith_shortref.htm)
[WRITE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwrite_shortref.htm)
[WRITE TO](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwrite_to_shortref.htm)
[WRITE TO itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwrite_to_itab_shortref.htm)